--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,10 +6,11 @@
       <button mat-button [matMenuTriggerFor]="menu">Choose theme</button>
     </div>
     <mat-menu #menu="matMenu">
-      <button mat-menu-item>Theme 1</button>
-      <button mat-menu-item>Theme 2</button>
-      <button mat-menu-item>Theme 3</button>
-      <button mat-menu-item>Theme 4</button>
+      <button mat-menu-item (click)="setTheme('')">Default theme</button>
+      <button mat-menu-item (click)="setTheme('theme-1')">Theme 1</button>
+      <button mat-menu-item (click)="setTheme('theme-2')">Theme 2</button>
+      <button mat-menu-item (click)="setTheme('theme-3')">Theme 3</button>
+      <button mat-menu-item (click)="setTheme('theme-4')">Theme 4</button>
     </mat-menu>
   </mat-toolbar-row>
 
@@ -40,10 +41,14 @@
   <h2>Tabs</h2>
   <mat-tab-group>
     <mat-tab label="Progress bar">
+      <br><br>
       <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+      <br><br>
     </mat-tab>
     <mat-tab label="Spinner">
+      <br><br>
       <mat-spinner></mat-spinner>
+      <br><br>
     </mat-tab>
   </mat-tab-group>
 </section>
