UPD: lightweight themes (+ 4 * 3kb + 56kb)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,8 @@
       <button mat-menu-item (click)="setTheme('')">Default theme</button>
       <button mat-menu-item (click)="setTheme('theme-1')">Theme 1</button>
       <button mat-menu-item (click)="setTheme('theme-2')">Theme 2</button>
-      <button mat-menu-item (click)="setTheme('theme-3')">Theme 3</button>
-      <button mat-menu-item (click)="setTheme('theme-4')">Theme 4</button>
+      <button mat-menu-item (click)="setTheme('theme-3-dark')">Theme 3</button>
+      <button mat-menu-item (click)="setTheme('theme-4-dark')">Theme 4</button>
     </mat-menu>
   </mat-toolbar-row>
 
