ADD: themes with material-theme-creator

--- a/src/themes/theme.variables.scss
+++ b/src/themes/theme.variables.scss
@@ -1,4 +1,4 @@
-@import "theme-creator";
+@import "~material-theme-creator/core";
 
 $primary-map-vars: create-theme-map('primary');
 $accent-map-vars: create-theme-map('accent');
