--- a/src/themes/themes/theme-4-dark.scss
+++ b/src/themes/themes/theme-4-dark.scss
@@ -1,53 +1,21 @@
 @import '~@angular/material/theming';
-@import "theme-creator";
+@import "~material-theme-creator/core";
 
 $primary-map: (
-  50: #e0f2f1,
-  100: #b2dfdb,
-  200: #80cbc4,
-  300: #4db6ac,
-  400: #26a69a,
-  500: #009688,
-  600: #00897b,
-  700: #00796b,
-  800: #00695c,
-  900: #004d40,
-  A100: #a7ffeb,
-  A200: #64ffda,
-  A400: #1de9b6,
-  A700: #00bfa5,
-  contrast: (
-    50: $dark-primary-text,
-    100: $dark-primary-text,
-    200: $dark-primary-text,
-    300: $dark-primary-text,
-    400: $dark-primary-text,
-    500: $light-primary-text,
-    600: $light-primary-text,
-    700: $light-primary-text,
-    800: $light-primary-text,
-    900: $light-primary-text,
-    A100: $dark-primary-text,
-    A200: $dark-primary-text,
-    A400: $dark-primary-text,
-    A700: $dark-primary-text,
-  )
-);
-$accent-map: (
-  50: #f1f8e9,
-  100: #dcedc8,
-  200: #c5e1a5,
-  300: #aed581,
-  400: #9ccc65,
-  500: #8bc34a,
-  600: #7cb342,
-  700: #689f38,
-  800: #558b2f,
-  900: #33691e,
-  A100: #ccff90,
-  A200: #b2ff59,
-  A400: #76ff03,
-  A700: #64dd17,
+  50: #fff8e1,
+  100: #ffecb3,
+  200: #ffe082,
+  300: #ffd54f,
+  400: #ffca28,
+  500: #ffc107,
+  600: #ffb300,
+  700: #ffa000,
+  800: #ff8f00,
+  900: #ff6f00,
+  A100: #ffe57f,
+  A200: #ffd740,
+  A400: #ffc400,
+  A700: #ffab00,
   contrast: (
     50: $dark-primary-text,
     100: $dark-primary-text,
@@ -56,13 +24,45 @@ $accent-map: (
     400: $dark-primary-text,
     500: $dark-primary-text,
     600: $dark-primary-text,
-    700: $light-primary-text,
-    800: $light-primary-text,
-    900: $light-primary-text,
+    700: $dark-primary-text,
+    800: $dark-primary-text,
+    900: $dark-primary-text,
     A100: $dark-primary-text,
     A200: $dark-primary-text,
     A400: $dark-primary-text,
     A700: $dark-primary-text,
+  )
+);
+$accent-map: (
+  50: #f3e5f5,
+  100: #e1bee7,
+  200: #ce93d8,
+  300: #ba68c8,
+  400: #ab47bc,
+  500: #9c27b0,
+  600: #8e24aa,
+  700: #7b1fa2,
+  800: #6a1b9a,
+  900: #4a148c,
+  A100: #ea80fc,
+  A200: #e040fb,
+  A400: #d500f9,
+  A700: #aa00ff,
+  contrast: (
+    50: $dark-primary-text,
+    100: $dark-primary-text,
+    200: $dark-primary-text,
+    300: $light-primary-text,
+    400: $light-primary-text,
+    500: $light-primary-text,
+    600: $light-primary-text,
+    700: $light-primary-text,
+    800: $light-primary-text,
+    900: $light-primary-text,
+    A100: $dark-primary-text,
+    A200: $light-primary-text,
+    A400: $light-primary-text,
+    A700: $light-primary-text,
   )
 );
 $warn-map: (
@@ -97,10 +97,16 @@ $warn-map: (
     A700: $light-primary-text,
   )
 );
-.theme-2 {
+.theme-4-dark {
   // This will add 3KB CSS
-  @include create-color($primary-map, 'primary');
-  @include create-color($accent-map, 'accent');
-  @include create-color($warn-map, 'warn');
+  @include create-variables-from-map('primary', $primary-map);
+  @include create-variables-from-map('accent', $accent-map);
+  @include create-variables-from-map('warn', $warn-map);
+
+  background: #455;
+
+  h2, h3 {
+    color: white
+  }
 }
 
